--- a/assesment.html
+++ b/assesment.html
@@ -5,7 +5,7 @@
    <meta name="twitter:card" content="summary">
     <meta
       property="og:url"
-      content="https://sumshover123.github.io/assessment/assessment.html"
+      content="https://sumshover123.github.io/assessment/assesment.html"
     >
     <meta property="og:title" content="あなたのいいところ診断">
     <meta
